Complete order function

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -4,3 +4,10 @@ ja:
       payment_method:
         credit: クレジットカード
         transfer: 銀行振込
+        
+      status:
+        no_payment: 入金待ち
+        paid: 入金確認
+        in_producting: 製作中
+        preparing_shipping: 発送準備中
+        shipped: 発送済み
