--- a/config/locales/models/ja.yml
+++ b/config/locales/models/ja.yml
@@ -2,12 +2,10 @@ ja:
   activerecord:
     models:
       item: 商品
-      genre: ジャンル
     attributes:
       item:
         name: 商品名
         introduction: 商品説明
         price: 税抜価格
         is_active: 販売ステータス
-      genre:
-        name: ジャンル名
+        genre_id: ジャンル名
