--- a/config/locales/models/ja.yml
+++ b/config/locales/models/ja.yml
@@ -2,6 +2,7 @@ ja:
   activerecord:
     models:
       item: 商品
+      genre: ジャンル
     attributes:
       item:
         name: 商品名
@@ -9,3 +10,5 @@ ja:
         price: 税抜価格
         is_active: 販売ステータス
         genre_id: ジャンル名
+      genre:
+        name: ジャンル名
